[project]
name = "yomitoku-slimpdf"
version = "0.0.0"
description = "日本語書籍スキャンの検索可能PDF生成・JBIG2背景圧縮ワークフロー。YomiToku(GPU)で生成し、背景画像を1bit JBIG2に差し替える。"
requires-python = ">=3.11,<3.14"
dependencies = [
    "yomitoku==0.13.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "pikepdf",
    "pillow",
    "opencv-python",
    "numpy",
    "img2pdf",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
