[project]
name = "yomitoku-slimpdf"
version = "0.0.0"
description = "YomiTokuで検索可能PDFを生成し、ページ画像を白黒JBIG2に差し替えてサイズを削減する"
requires-python = ">=3.11,<3.14"
dependencies = [
    "yomitoku==0.13.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "pikepdf",
    "pillow",
    "opencv-python",
    "numpy",
    "img2pdf",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "ty>=0.0.44",
]
